@@ -1,3 +1,9 @@
+2008-12-28  Bruce van der Kooij  <brucevdk@gmail.com>
+
+	* nautilussvn/lib/extensions/nautilus/NautilusSvn.py:
+	I think I understand the bug now invalidate_extension_info doesn't always
+	lead to a update_file_info, but no idea why.
+
 2008-12-28  Bruce van der Kooij  <brucevdkooij@gmail.com>
 
 	* setup.py:
